force-app/main/default/objects/DocumentTemplate__c/DocumentTemplate__c.object-meta.xml
<CustomObject>
    <label>Modèle de document</label>
    <nameField>
        <label>Nom de DocumentTemplate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modèles de document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>