force-app/main/default/objects/DocumentTemplate__c/fields/isHTML__c.field-meta.xml
<CustomField>
    <fullName>isHTML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modele HTML ?</label>
    <type>Checkbox</type>
</CustomField>