force-app/main/default/objects/DocumentTemplate__c/fields/TemplateBody__c.field-meta.xml
<CustomField>
    <fullName>TemplateBody__c</fullName>
    <label>Modele texte</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>