force-app/main/default/objects/DocumentTemplate__c/fields/TemplateBodyHTML__c.field-meta.xml
<CustomField>
    <fullName>TemplateBodyHTML__c</fullName>
    <label>Modèle HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>